--- a/index.html
+++ b/index.html
@@ -1,98 +1,250 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StopMotion Draw - Art & Créations</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ma Carte de Visite | StopMotionDraw</title>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+    body {
+      margin: 0;
+      font-family: "Poppins", sans-serif;
+      background: #0b0b0d;
+      color: #f5f5f5;
+      line-height: 1.6;
+    }
+
+    header {
+      text-align: center;
+      padding: 60px 20px 40px;
+      background: linear-gradient(180deg, #121212 0%, #0b0b0d 100%);
+    }
+    header h1 {
+      font-size: 2.5rem;
+      letter-spacing: 2px;
+      color: #fff;
+    }
+    header p {
+      font-size: 1rem;
+      color: #aaa;
+    }
+
+    section {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 60px 20px;
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 1.8rem;
+      color: #e0e0e0;
+      margin-bottom: 40px;
+      position: relative;
+    }
+    h2::after {
+      content: "";
+      display: block;
+      width: 60px;
+      height: 3px;
+      background: #e63946;
+      margin: 10px auto 0;
+      border-radius: 3px;
+    }
+
+    /* --- OFFRES --- */
+    .offers {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 30px;
+    }
+    .offer {
+      background: #16161a;
+      border-radius: 12px;
+      padding: 25px;
+      text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    }
+    .offer:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+    }
+    .offer h3 {
+      color: #fff;
+      margin-bottom: 10px;
+      font-size: 1.3rem;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+    .offer p {
+      color: #ccc;
+      margin: 5px 0;
+      font-size: 0.95rem;
+    }
+    .price {
+      font-size: 1.5rem;
+      color: #e63946;
+      font-weight: bold;
+      margin-top: 15px;
+    }
+
+    /* --- GALERIE --- */
+    .gallery {
+      display: flex;
+      overflow-x: auto;
+      gap: 20px;
+      scroll-snap-type: x mandatory;
+      padding-bottom: 10px;
+      scrollbar-width: thin;
+      scrollbar-color: #e63946 #111;
+    }
+    .gallery::-webkit-scrollbar {
+      height: 8px;
+    }
+    .gallery::-webkit-scrollbar-thumb {
+      background: #e63946;
+      border-radius: 4px;
+    }
+    .gallery img {
+      flex-shrink: 0;
+      width: 300px;
+      height: auto;
+      border-radius: 15px;
+      scroll-snap-align: center;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.4);
+    }
+    .gallery img:hover {
+      transform: scale(1.05);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.6);
+    }
+
+    footer {
+      text-align: center;
+      padding: 40px 20px;
+      border-top: 1px solid #222;
+      background: #0d0d0f;
+    }
+    .socials {
+      margin-bottom: 20px;
+    }
+    .socials a {
+      margin: 0 10px;
+      color: #f5f5f5;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+    .socials a:hover {
+      color: #e63946;
+    }
+    .email {
+      font-size: 0.9rem;
+      color: #aaa;
+    }
+
+    /* --- BOUTON RETOUR HAUT --- */
+    #backToTop {
+      position: fixed;
+      bottom: 25px;
+      right: 25px;
+      background: #e63946;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      font-size: 22px;
+      cursor: pointer;
+      display: none;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+      transition: transform 0.3s ease;
+    }
+    #backToTop:hover {
+      transform: scale(1.1);
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="assets/logo.png" alt="Logo StopMotion Draw">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#offres">Offres</a></li>
-                <li><a href="#galerie">Galerie</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <main>
-        <section class="hero">
-            <h1>StopMotion Draw</h1>
-            <p>Artiste & Créateur de dessins uniques</p>
-        </section>
+  <header id="top">
+    <h1>StopMotionDraw</h1>
+    <p>Créations artistiques & illustrations personnalisées</p>
+  </header>
 
-        <section id="offres" class="offres">
-            <h2>Mes Offres</h2>
-            <div class="offre-cards">
-                <div class="card">
-                    <h3>Line-art</h3>
-                    <p>Dessin au trait pur</p>
-                    <p><strong>20€</strong></p>
-                    <ul>
-                        <li>1 personnage</li>
-                        <li>Format A4 portrait</li>
-                        <li>Sans droits d'auteurs</li>
-                    </ul>
-                </div>
-                <div class="card">
-                    <h3>Flat-color</h3>
-                    <p>Dessin au trait avec couleurs plates</p>
-                    <p><strong>40€</strong></p>
-                    <ul>
-                        <li>1 personnage</li>
-                        <li>Fond uni</li>
-                        <li>Format A4 portrait ou paysage</li>
-                        <li>Sans droits d'auteurs</li>
-                    </ul>
-                </div>
-                <div class="card">
-                    <h3>Line-art + Flat-color + Shades</h3>
-                    <p>Dessin complet avec ombrages</p>
-                    <p><strong>60€</strong></p>
-                    <ul>
-                        <li>1 personnage</li>
-                        <li>Fond uni</li>
-                        <li>Format A4 portrait ou paysage</li>
-                        <li>Sans droits d'auteurs</li>
-                        <li>Pose en perspective</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
+  <section>
+    <h2>Mes Offres</h2>
+    <div class="offers">
+      <div class="offer">
+        <h3>Line-art</h3>
+        <p>Dessin au trait pur</p>
+        <p>1 personnage</p>
+        <p>Format A4 portrait</p>
+        <p>Sans droits d'auteur</p>
+        <div class="price">20€</div>
+      </div>
+      <div class="offer">
+        <h3>Flat-color</h3>
+        <p>Dessin au trait avec couleurs plates</p>
+        <p>1 personnage</p>
+        <p>Fond uni</p>
+        <p>Format A4 portrait ou paysage</p>
+        <p>Sans droits d'auteur</p>
+        <div class="price">40€</div>
+      </div>
+      <div class="offer">
+        <h3>Line-art + Flat-color + Shades</h3>
+        <p>Dessin complet avec ombrages</p>
+        <p>1 personnage</p>
+        <p>Fond uni</p>
+        <p>Format A4 portrait ou paysage</p>
+        <p>Sans droits d'auteur</p>
+        <p>Pose en perspective</p>
+        <div class="price">60€</div>
+      </div>
+    </div>
+  </section>
 
-        <section id="galerie" class="galerie">
-            <h2>Galerie</h2>
-            <div class="galerie-grid" id="galerie-grid">
-                <!-- Les images seront chargées automatiquement depuis le dossier assets/images -->
-            </div>
-        </section>
+  <section>
+    <h2>Galerie</h2>
+    <div class="gallery">
+      <img src="Anime Draw - Frieren.png" alt="Frieren">
+      <img src="Anime Draw - Inosuke Hashibira.png" alt="Inosuke Hashibira">
+      <img src="Anime Draw - Kikoru Shinomiya.png" alt="Kikoru Shinomiya">
+      <img src="Anime Draw - Narumi x Hoshina.png" alt="Narumi x Hoshina">
+      <img src="Anime Draw - Todoroki Touya.png" alt="Todoroki Touya">
+      <img src="Anime Draw - Zabuza Momochi.png" alt="Zabuza Momochi">
+      <img src="Draw monster - 1.png" alt="Personnage original 1">
+      <img src="Drawing Redesign - 1.png" alt="Redesign 1">
+      <img src="Drawing Redesign - 2.png" alt="Redesign 2">
+      <img src="Drawing Redesign - 3.png" alt="Redesign 3">
+    </div>
+  </section>
 
-        <section id="contact" class="contact">
-            <h2>Contact</h2>
-            <div class="contact-info">
-                <p><i class="fas fa-envelope"></i> stopmotiondraw61@gmail.com</p>
-                <div class="reseaux">
-                    <a href="https://www.facebook.com/profile.php?id=61581135437307" rel="noopener" target="_blank" title="fb link"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.youtube.com/@StopMotionDraw" rel="noopener" target="_blank" title="ytb link"><i class="fab fa-youtube"></i></a>
-                    <a href="https://www.instagram.com/stopmotion_draw/" rel="noopener" target="_blank" title="insta link"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.my-universe.art/" rel="noopener" target="_blank" title="website link"><i class="fas fa-globe"></i></a>
-                </div>
-            </div>
-        </section>
-    </main>
+  <footer>
+    <div class="socials">
+      <a href="https://www.facebook.com/profile.php?id=61581135437307" target="_blank">Facebook</a> |
+      <a href="https://www.youtube.com/@StopMotionDraw" target="_blank">YouTube</a> |
+      <a href="https://www.instagram.com/stopmotion_draw/" target="_blank">Instagram</a> |
+      <a href="https://www.my-universe.art/" target="_blank">Portfolio</a>
+    </div>
+    <div class="email">📧 stopmotiondraw61@gmail.com</div>
+  </footer>
 
-    <footer>
-        <p>&copy; 2025 StopMotion Draw. Tous droits réservés.</p>
-    </footer>
+  <button id="backToTop" title="Retour en haut">↑</button>
 
-    <button id="scroll-top-btn" title="Retour en haut"><i class="fas fa-arrow-up"></i></button>
+  <script>
+    const backToTop = document.getElementById("backToTop");
+    window.addEventListener("scroll", () => {
+      if (window.scrollY > 200) backToTop.style.display = "block";
+      else backToTop.style.display = "none";
+    });
+    backToTop.addEventListener("click", () => {
+      window.scrollTo({ top: 0, behavior: "smooth" });
+    });
+  </script>
 
-    <script src="script.js"></script>
 </body>
 </html>
