--- a/index.html
+++ b/index.html
@@ -210,16 +210,16 @@
   <section>
     <h2>Galerie</h2>
     <div class="gallery">
-      <img src="Anime Draw - Frieren.png" alt="Frieren">
-      <img src="Anime Draw - Inosuke Hashibira.png" alt="Inosuke Hashibira">
-      <img src="Anime Draw - Kikoru Shinomiya.png" alt="Kikoru Shinomiya">
-      <img src="Anime Draw - Narumi x Hoshina.png" alt="Narumi x Hoshina">
-      <img src="Anime Draw - Todoroki Touya.png" alt="Todoroki Touya">
-      <img src="Anime Draw - Zabuza Momochi.png" alt="Zabuza Momochi">
-      <img src="Draw monster - 1.png" alt="Personnage original 1">
-      <img src="Drawing Redesign - 1.png" alt="Redesign 1">
-      <img src="Drawing Redesign - 2.png" alt="Redesign 2">
-      <img src="Drawing Redesign - 3.png" alt="Redesign 3">
+      <img src="assets/images/Anime Draw - Frieren.png" alt="Frieren">
+      <img src="assets/images/Anime Draw - Inosuke Hashibira.png" alt="Inosuke Hashibira">
+      <img src="assets/images/Anime Draw - Kikoru Shinomiya.png" alt="Kikoru Shinomiya">
+      <img src="assets/images/Anime Draw - Narumi x Hoshina.png" alt="Narumi x Hoshina">
+      <img src="assets/images/Anime Draw - Todoroki Touya.png" alt="Todoroki Touya">
+      <img src="assets/images/Anime Draw - Zabuza Momochi.png" alt="Zabuza Momochi">
+      <img src="assets/images/Draw monster - 1.png" alt="Personnage original 1">
+      <img src="assets/images/Drawing Redesign - 1.png" alt="Redesign 1">
+      <img src="assets/images/Drawing Redesign - 2.png" alt="Redesign 2">
+      <img src="assets/images/Drawing Redesign - 3.png" alt="Redesign 3">
     </div>
   </section>
 
@@ -248,3 +248,4 @@
 
 </body>
 </html>
+
