--- a/index.html
+++ b/index.html
@@ -30,26 +30,30 @@
     }
     #loader img {
       width: 90px;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
       filter: drop-shadow(0 0 6px rgba(230,57,70,0.7));
       animation: pulse 1.5s infinite alternate;
     }
     #progress-container {
       width: 250px;
-      height: 6px;
+      height: 8px;
       background: #222;
-      border-radius: 3px;
+      border-radius: 4px;
       overflow: hidden;
+      position: relative;
     }
     #progress-bar {
       width: 0;
       height: 100%;
       background: #e63946;
-      animation: loadbar 5s forwards;
+      transition: width 0.1s ease;
     }
-    @keyframes loadbar {
-      from { width: 0; }
-      to { width: 100%; }
+    #progress-text {
+      color: #f5f5f5;
+      font-size: 0.9rem;
+      margin-top: 10px;
+      text-align: center;
+      letter-spacing: 1px;
     }
     @keyframes pulse {
       from { transform: scale(1); opacity: 0.7; }
@@ -222,7 +226,7 @@
     }
     #backToTop:hover { transform: scale(1.1); }
 
-    /* --- Apparition du site --- */
+    /* Apparition du site */
     #content {
       opacity: 0;
       transition: opacity 1.5s ease;
@@ -232,13 +236,18 @@
 </head>
 <body>
 
-  <!-- Écran de chargement -->
+  <!-- Loader -->
   <div id="loader">
     <img src="assets/images/Untitled_logo_1_free-file-removebg-preview.png" alt="Logo StopMotionDraw">
-    <div id="progress-container"><div id="progress-bar"></div></div>
+    <div id="progress-container">
+      <div id="progress-bar"></div>
+    </div>
+    <div id="progress-text">0%</div>
+    <audio id="sfx-door" src="assets/sounds/door_open.mp3" preload="auto"></audio>
+    <audio id="sfx-wind" src="assets/sounds/futuristic_wind.mp3" preload="auto"></audio>
   </div>
 
-  <!-- Contenu du site -->
+  <!-- Contenu principal -->
   <div id="content">
     <header id="top">
       <img src="assets/images/Untitled_logo_1_free-file-removebg-preview.png" alt="Logo StopMotionDraw">
@@ -320,9 +329,25 @@
   </div>
 
   <script>
-    // Progress-bar -> affichage du site
+    // Loader avec progression
+    let progress = 0;
+    const bar = document.getElementById("progress-bar");
+    const text = document.getElementById("progress-text");
+    const door = document.getElementById("sfx-door");
+    const wind = document.getElementById("sfx-wind");
+
+    const interval = setInterval(() => {
+      progress += 2;
+      bar.style.width = progress + "%";
+      text.textContent = progress + "%";
+      if (progress >= 100) clearInterval(interval);
+    }, 100);
+
+    // Fin du chargement (5s)
     window.addEventListener("load", () => {
       setTimeout(() => {
+        door.play();
+        wind.play();
         document.getElementById("loader").style.display = "none";
         document.getElementById("content").classList.add("visible");
       }, 5000);
@@ -337,7 +362,7 @@
       window.scrollTo({ top: 0, behavior: "smooth" });
     });
 
-    // Fade-in des images
+    // Fade-in images
     const imgs = document.querySelectorAll(".gallery img");
     const observer = new IntersectionObserver(entries => {
       entries.forEach(e => { if (e.isIntersecting) e.target.classList.add("visible"); });
