--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>StopMotionDraw | Carte de Visite</title>
+  <title>Ma Carte de Visite</title>
   <link rel="icon" type="image/png" href="assets/images/Untitled_logo_1_free-file-removebg-preview.png" />
   <style>
     html { scroll-behavior: smooth; }
@@ -371,3 +371,4 @@
   </script>
 </body>
 </html>
+
