--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
       to { transform: scale(1.1); opacity: 1; }
     }
 
+    /* --------- FONDU D'ÉCRAN --------- */
+    #fade-overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: #0b0b0d;
+      opacity: 1;
+      pointer-events: none;
+      transition: opacity 1.5s ease;
+      z-index: 5000;
+    }
+
     /* --------- HEADER --------- */
     header {
       text-align: center;
@@ -167,6 +179,22 @@
       margin-top: 15px;
     }
 
+    .note {
+      text-align: center;
+      margin-top: 40px;
+      color: #aaa;
+      font-size: 0.95rem;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+      font-style: italic;
+      line-height: 1.7;
+    }
+    .note strong {
+      color: #e63946;
+      font-weight: 500;
+    }
+
     /* --------- GALERIE --------- */
     .gallery {
       display: grid;
@@ -236,22 +264,23 @@
 </head>
 <body>
 
-  <!-- Loader -->
+  <!-- Écran de chargement -->
   <div id="loader">
     <img src="assets/images/Untitled_logo_1_free-file-removebg-preview.png" alt="Logo StopMotionDraw">
-    <div id="progress-container">
-      <div id="progress-bar"></div>
-    </div>
+    <div id="progress-container"><div id="progress-bar"></div></div>
     <div id="progress-text">0%</div>
     <audio id="sfx-door" src="assets/sounds/door_open.mp3" preload="auto"></audio>
     <audio id="sfx-wind" src="assets/sounds/futuristic_wind.mp3" preload="auto"></audio>
   </div>
 
+  <!-- Overlay de fondu -->
+  <div id="fade-overlay"></div>
+
   <!-- Contenu principal -->
   <div id="content">
     <header id="top">
       <img src="assets/images/Untitled_logo_1_free-file-removebg-preview.png" alt="Logo StopMotionDraw">
-      <h1>StopMotionDraw</h1>
+      <h1>StopMotionDraw - Carte de visite</h1>
       <p>Créations artistiques & illustrations personnalisées</p>
     </header>
 
@@ -293,6 +322,12 @@
           <div class="price">60€</div>
         </div>
       </div>
+
+      <p class="note">
+        ✨ <strong>Note :</strong> Je suis conscient que tout le monde n’a pas les mêmes moyens.  
+        Si tu souhaites une illustration mais que ton budget est limité, n’hésite pas à m’en parler.  
+        On peut <strong>adapter le tarif</strong> ou trouver une solution ensemble, le but c’est de créer avant tout. 🎨
+      </p>
     </section>
 
     <section id="gallery">
@@ -329,27 +364,30 @@
   </div>
 
   <script>
-    // Loader avec progression
+    // Loader progress bar
     let progress = 0;
     const bar = document.getElementById("progress-bar");
     const text = document.getElementById("progress-text");
     const door = document.getElementById("sfx-door");
     const wind = document.getElementById("sfx-wind");
+    const fade = document.getElementById("fade-overlay");
 
     const interval = setInterval(() => {
       progress += 2;
+      if (progress > 100) progress = 100;
       bar.style.width = progress + "%";
       text.textContent = progress + "%";
-      if (progress >= 100) clearInterval(interval);
+      if (progress === 100) clearInterval(interval);
     }, 100);
 
-    // Fin du chargement (5s)
     window.addEventListener("load", () => {
       setTimeout(() => {
         door.play();
         wind.play();
         document.getElementById("loader").style.display = "none";
         document.getElementById("content").classList.add("visible");
+        fade.style.opacity = "0";
+        setTimeout(() => fade.remove(), 1500);
       }, 5000);
     });
 
@@ -371,4 +409,3 @@
   </script>
 </body>
 </html>
-
