--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
         <img src="assets/images/Anime Draw - Narumi x Hoshina.png" alt="Narumi x Hoshina">
         <img src="assets/images/Anime Draw - Todoroki Touya.png" alt="Todoroki Touya">
         <img src="assets/images/Anime Draw - Zabuza Momochi.png" alt="Zabuza Momochi">
+        <img src="assets/images/Anime Draw - Zenitsu Agatsuma.png" alt="Zenitsu Agatsuma">
         <img src="assets/images/Draw monster - 1.png" alt="Personnage original 1">
         <img src="assets/images/Drawing Redesign - 1.png" alt="Redesign 1">
         <img src="assets/images/Drawing Redesign - 2.png" alt="Redesign 2">
@@ -437,3 +438,4 @@
   </script>
 </body>
 </html>
+
