--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       background: linear-gradient(90deg, #e63946, #9b1c2e, #e63946);
       color: #fff;
       text-align: center;
+      font-weight: bold;
       padding: 8px 0;
       overflow: hidden;
       position: fixed;
@@ -438,4 +439,5 @@
   </script>
 </body>
 </html>
+
 
