--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       background: linear-gradient(90deg, #e63946, #9b1c2e, #e63946);
       color: #fff;
       text-align: center;
-      font-weight: bold;
       padding: 8px 0;
       overflow: hidden;
       position: fixed;
@@ -33,6 +32,7 @@
     .banner p {
       white-space: nowrap;
       font-size: 0.95rem;
+      font-weight: bolder;
       animation: scrollText 15s linear infinite;
       margin: 0;
     }
@@ -439,5 +439,6 @@
   </script>
 </body>
 </html>
+
 
 
