--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     <section id="gallery">
       <h2>Galerie</h2>
       <div class="gallery">
-        <img src="assets/images/Anime Draw - Frieren.png" alt="Frieren">
+        <img src="assets/images/Anime Draw - Frieren.jpg" alt="Frieren">
         <img src="assets/images/Anime Draw - Inosuke Hashibira.png" alt="Inosuke Hashibira">
         <img src="assets/images/Anime Draw - Kikoru Shinomiya.png" alt="Kikoru Shinomiya">
         <img src="assets/images/Anime Draw - Narumi x Hoshina.png" alt="Narumi x Hoshina">
@@ -438,6 +438,7 @@
   </script>
 </body>
 </html>
+
 
 
 
