--- a/index.html
+++ b/index.html
@@ -362,12 +362,12 @@
       <h2>Galerie</h2>
       <div class="gallery">
         <img src="assets/images/Anime Draw - Frieren.jpg" alt="Frieren">
-        <img src="assets/images/Anime Draw - Inosuke Hashibira.png" alt="Inosuke Hashibira">
-        <img src="assets/images/Anime Draw - Kikoru Shinomiya.png" alt="Kikoru Shinomiya">
-        <img src="assets/images/Anime Draw - Narumi x Hoshina.png" alt="Narumi x Hoshina">
-        <img src="assets/images/Anime Draw - Todoroki Touya.png" alt="Todoroki Touya">
-        <img src="assets/images/Anime Draw - Zabuza Momochi.png" alt="Zabuza Momochi">
-        <img src="assets/images/Anime Draw - Zenitsu Agatsuma.png" alt="Zenitsu Agatsuma">
+        <img src="assets/images/Anime Draw - Inosuke Hashibira.jpg" alt="Inosuke Hashibira">
+        <img src="assets/images/Anime Draw - Kikoru Shinomiya.jpg" alt="Kikoru Shinomiya">
+        <img src="assets/images/Anime Draw - Narumi x Hoshina.jpg" alt="Narumi x Hoshina">
+        <img src="assets/images/Anime Draw - Todoroki Touya.jpg" alt="Todoroki Touya">
+        <img src="assets/images/Anime Draw - Zabuza Momochi.jpg" alt="Zabuza Momochi">
+        <img src="assets/images/Anime Draw - Zenitsu Agatsuma.jpg" alt="Zenitsu Agatsuma">
         <img src="assets/images/Draw monster - 1.png" alt="Personnage original 1">
         <img src="assets/images/Drawing Redesign - 1.png" alt="Redesign 1">
         <img src="assets/images/Drawing Redesign - 2.png" alt="Redesign 2">
@@ -438,6 +438,7 @@
   </script>
 </body>
 </html>
+
 
 
 
