--- a/index.html
+++ b/index.html
@@ -368,12 +368,12 @@
         <img src="assets/images/Anime Draw - Todoroki Touya.jpg" alt="Todoroki Touya">
         <img src="assets/images/Anime Draw - Zabuza Momochi.jpg" alt="Zabuza Momochi">
         <img src="assets/images/Anime Draw - Zenitsu Agatsuma.jpg" alt="Zenitsu Agatsuma">
-        <img src="assets/images/Draw monster - 1.png" alt="Personnage original 1">
-        <img src="assets/images/Drawing Redesign - 1.png" alt="Redesign 1">
-        <img src="assets/images/Drawing Redesign - 2.png" alt="Redesign 2">
-        <img src="assets/images/Drawing Redesign - 3.png" alt="Redesign 3">
-        <img src="assets/images/Drawing Redesign - 4.png" alt="Redesign 4">
-        <img src="assets/images/Drawing Redesign - 5.png" alt="Redesign 5">
+        <img src="assets/images/Draw monster - 1.jpg" alt="Personnage original 1">
+        <img src="assets/images/Drawing Redesign - 1.jpg" alt="Redesign 1">
+        <img src="assets/images/Drawing Redesign - 2.jpg" alt="Redesign 2">
+        <img src="assets/images/Drawing Redesign - 3.jpg" alt="Redesign 3">
+        <img src="assets/images/Drawing Redesign - 4.jpg" alt="Redesign 4">
+        <img src="assets/images/Drawing Redesign - 5.jpg" alt="Redesign 5">
         <img src="assets/images/Le Compte de Monte-Crysto.png" alt="Le Compte de Monte-Crysto">
         <img src="assets/images/Mecha Drawing - 1.png" alt="Mecha Drawing 1">
       </div>
@@ -438,6 +438,7 @@
   </script>
 </body>
 </html>
+
 
 
 
